# ml-engineering-portfolio

./: .gitignore  README.md  pyproject.toml  wget-log
ViT_cifar10/: README.md  config.py  dataset.py  demo_vit_cifar10.ipynb  model.py  predict.py  train.py  utils.py
doc_image_classification/: labelencoder.pkl  research_netebook.ipynb  tz.md
doc_image_classification/script/: config.py  dataset.py  model.py  predict.py  train.py
vanilla_ml/Gradient_boosting/: 01-Gradient-Boosting.ipynb  readme.md
